# TRIPs

./: pyproject.toml
Ecoli_D1/: initial_processing.ipynb
Ecoli_D1/outputs/: cell_angle_gene_angle_relationship.txt  lb_binned_expression_scvi.txt  lb_origin_angle_scaled.txt
